--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-sliding-pane": "^7.3.0",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
